Properly report errors that occur during ListUpdate that aren't reported when any particular item fails

BUG:315155
FIXED-IN:1.9.95